src/objects/Message_Read_By__c.object
<CustomObject>
    <fields>
        <fullName>Message_Status__c</fullName>
        <label>Message Status</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unread</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <referenceTo>Message_History__c</referenceTo>
        <relationshipLabel>Messages Read By</relationshipLabel>
        <relationshipName>Messages_Read_By</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Messages_Read_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Message Read By</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MRB-{00000000}</displayFormat>
        <label>Message Read By Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages Read By</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>